tools/decafast/answer/decafast.output
Terminals which are not used

   T_DOT
   T_NULL
   T_GE
   T_LE


State 5 conflicts: 1 reduce/reduce
State 24 conflicts: 2 reduce/reduce
State 34 conflicts: 1 reduce/reduce
State 76 conflicts: 9 reduce/reduce
State 88 conflicts: 1 reduce/reduce
State 123 conflicts: 2 reduce/reduce
State 132 conflicts: 2 shift/reduce
State 133 conflicts: 2 shift/reduce
State 161 conflicts: 2 shift/reduce
State 162 conflicts: 2 shift/reduce
State 163 conflicts: 2 shift/reduce
State 164 conflicts: 2 shift/reduce
State 165 conflicts: 15 shift/reduce
State 166 conflicts: 2 shift/reduce
State 167 conflicts: 2 shift/reduce
State 168 conflicts: 15 shift/reduce
State 169 conflicts: 2 shift/reduce
State 170 conflicts: 2 shift/reduce
State 171 conflicts: 2 shift/reduce
State 172 conflicts: 2 shift/reduce
State 173 conflicts: 2 shift/reduce
State 174 conflicts: 2 shift/reduce
State 175 conflicts: 2 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: extern_0list decafpackage

    3 decafpackage: T_PACKAGE T_IDENTIFIER T_LCB field_decl_0list method_decl_0list T_RCB

    4 extern_0list: extern_define extern_0list
    5             | extern_define
    6             | /* empty */

    7 extern_define: T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN T_RPAREN method_type T_SEMICOLON
    8              | T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN extern_type_1commalist T_RPAREN method_type T_SEMICOLON

    9 extern_type_1commalist: extern_type_1commalist T_COMMA extern_type
   10                       | extern_type

   11 field_decl_0list: field_decl field_decl_0list
   12                 | field_decl
   13                 | /* empty */

   14 field_decl: T_VAR identifier_1commalist type T_SEMICOLON
   15           | T_VAR identifier_1commalist array_type T_SEMICOLON
   16           | T_VAR identifier_1commalist type T_ASSIGN constant T_SEMICOLON

   17 method_decl_0list: method_decl method_decl_0list
   18                  | method_decl
   19                  | /* empty */

   20 method_decl: T_FUNC T_IDENTIFIER T_LPAREN T_RPAREN method_type block
   21            | T_FUNC T_IDENTIFIER T_LPAREN method_decl_1commalist T_RPAREN method_type block

   22 method_decl_1commalist: method_decl_1commalist T_COMMA T_IDENTIFIER type
   23                       | T_IDENTIFIER type

   24 method_call: T_IDENTIFIER T_LPAREN T_RPAREN
   25            | T_IDENTIFIER T_LPAREN method_arg_1commalist T_RPAREN

   26 method_arg_1commalist: method_arg_1commalist T_COMMA method_arg
   27                      | method_arg

   28 method_arg: expr
   29           | T_STRINGCONSTANT

   30 statement: T_IF T_LPAREN expr T_RPAREN block
   31          | T_IF T_LPAREN expr T_RPAREN block T_ELSE block
   32          | T_WHILE T_LPAREN expr T_RPAREN block
   33          | T_FOR T_LPAREN assign_1list T_SEMICOLON expr T_SEMICOLON assign_1list T_RPAREN block
   34          | T_RETURN T_SEMICOLON
   35          | T_RETURN T_LPAREN T_RPAREN T_SEMICOLON
   36          | T_RETURN T_LPAREN expr T_RPAREN T_SEMICOLON
   37          | T_BREAK T_SEMICOLON
   38          | T_CONTINUE T_SEMICOLON
   39          | assign T_SEMICOLON
   40          | method_call T_SEMICOLON
   41          | block

   42 block: T_LCB var_decl_0list statement_0list T_RCB

   43 statement_0list: statement statement_0list
   44                | statement
   45                | /* empty */

   46 var_decl_0list: var_decl var_decl_0list
   47               | var_decl
   48               | /* empty */

   49 var_decl: T_VAR identifier_1commalist type T_SEMICOLON

   50 identifier_1commalist: identifier_1commalist T_COMMA T_IDENTIFIER
   51                      | T_IDENTIFIER

   52 assign_1list: assign assign_1list
   53             | assign

   54 assign: T_IDENTIFIER T_ASSIGN expr
   55       | T_IDENTIFIER T_LSB expr T_RSB T_ASSIGN expr

   56 expr: T_IDENTIFIER T_LSB expr T_RSB
   57     | T_IDENTIFIER
   58     | T_LPAREN expr T_RPAREN
   59     | T_NOT expr
   60     | T_MINUS expr
   61     | constant
   62     | method_call
   63     | expr T_PLUS expr
   64     | expr T_MINUS expr
   65     | expr T_MULT expr
   66     | expr T_DIV expr
   67     | expr T_LEFTSHIFT expr
   68     | expr T_RIGHTSHIFT expr
   69     | expr T_MOD expr
   70     | expr T_EQ expr
   71     | expr T_NEQ expr
   72     | expr T_LT expr
   73     | expr T_LEQ expr
   74     | expr T_GT expr
   75     | expr T_GEQ expr
   76     | expr T_AND expr
   77     | expr T_OR expr

   78 extern_type: T_STRINGTYPE
   79            | type

   80 method_type: T_VOID
   81            | type

   82 array_type: T_LSB T_INTCONSTANT T_RSB type

   83 type: T_INTTYPE
   84     | T_BOOLTYPE

   85 constant: T_INTCONSTANT
   86         | T_CHARCONSTANT
   87         | T_STRINGCONSTANT
   88         | bool_constant

   89 bool_constant: T_TRUE
   90              | T_FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
T_COMMA (258) 9 22 26 50
T_LPAREN (259) 7 8 20 21 24 25 30 31 32 33 35 36 58
T_LCB (260) 3 42
T_LSB (261) 55 56 82
T_RCB (262) 3 42
T_RPAREN (263) 7 8 20 21 24 25 30 31 32 33 35 36 58
T_RSB (264) 55 56 82
T_SEMICOLON (265) 7 8 14 15 16 33 34 35 36 37 38 39 40 49
T_AND (266) 76
T_ASSIGN (267) 16 54 55
T_DIV (268) 66
T_DOT (269)
T_EQ (270) 70
T_GEQ (271) 75
T_GT (272) 74
T_LEFTSHIFT (273) 67
T_LEQ (274) 73
T_LT (275) 72
T_MINUS (276) 60 64
T_MOD (277) 69
T_MULT (278) 65
T_NEQ (279) 71
T_NOT (280) 59
T_OR (281) 77
T_PLUS (282) 63
T_RIGHTSHIFT (283) 68
T_BOOLTYPE (284) 84
T_BREAK (285) 37
T_CONTINUE (286) 38
T_ELSE (287) 31
T_EXTERN (288) 7 8
T_FALSE (289) 90
T_FOR (290) 33
T_FUNC (291) 7 8 20 21
T_IF (292) 30 31
T_INTTYPE (293) 83
T_NULL (294)
T_PACKAGE (295) 3
T_RETURN (296) 34 35 36
T_STRINGTYPE (297) 78
T_TRUE (298) 89
T_VAR (299) 14 15 16 49
T_VOID (300) 80
T_WHILE (301) 32
T_CHARCONSTANT (302) 86
T_INTCONSTANT (303) 82 85
T_STRINGCONSTANT (304) 29 87
T_IDENTIFIER (305) 3 7 8 20 21 22 23 24 25 50 51 54 55 56 57
T_GE (306)
T_LE (307)
UM (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
start (55)
    on left: 1, on right: 0
program (56)
    on left: 2, on right: 1
decafpackage (57)
    on left: 3, on right: 2
extern_0list (58)
    on left: 4 5 6, on right: 2 4
extern_define (59)
    on left: 7 8, on right: 4 5
extern_type_1commalist (60)
    on left: 9 10, on right: 8 9
field_decl_0list (61)
    on left: 11 12 13, on right: 3 11
field_decl (62)
    on left: 14 15 16, on right: 11 12
method_decl_0list (63)
    on left: 17 18 19, on right: 3 17
method_decl (64)
    on left: 20 21, on right: 17 18
method_decl_1commalist (65)
    on left: 22 23, on right: 21 22
method_call (66)
    on left: 24 25, on right: 40 62
method_arg_1commalist (67)
    on left: 26 27, on right: 25 26
method_arg (68)
    on left: 28 29, on right: 26 27
statement (69)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 43 44
block (70)
    on left: 42, on right: 20 21 30 31 32 33 41
statement_0list (71)
    on left: 43 44 45, on right: 42 43
var_decl_0list (72)
    on left: 46 47 48, on right: 42 46
var_decl (73)
    on left: 49, on right: 46 47
identifier_1commalist (74)
    on left: 50 51, on right: 14 15 16 49 50
assign_1list (75)
    on left: 52 53, on right: 33 52
assign (76)
    on left: 54 55, on right: 39 52 53
expr (77)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77, on right: 28 30 31 32 33 36 54 55 56 58 59 60 63 64
    65 66 67 68 69 70 71 72 73 74 75 76 77
extern_type (78)
    on left: 78 79, on right: 9 10
method_type (79)
    on left: 80 81, on right: 7 8 20 21
array_type (80)
    on left: 82, on right: 15
type (81)
    on left: 83 84, on right: 14 16 22 23 49 79 81 82
constant (82)
    on left: 85 86 87 88, on right: 16 61
bool_constant (83)
    on left: 89 90, on right: 88


state 0

    0 $accept: . start $end

    T_EXTERN  shift, and go to state 1

    $default  reduce using rule 6 (extern_0list)

    start          go to state 2
    program        go to state 3
    extern_0list   go to state 4
    extern_define  go to state 5


state 1

    7 extern_define: T_EXTERN . T_FUNC T_IDENTIFIER T_LPAREN T_RPAREN method_type T_SEMICOLON
    8              | T_EXTERN . T_FUNC T_IDENTIFIER T_LPAREN extern_type_1commalist T_RPAREN method_type T_SEMICOLON

    T_FUNC  shift, and go to state 6


state 2

    0 $accept: start . $end

    $end  shift, and go to state 7


state 3

    1 start: program .

    $default  reduce using rule 1 (start)


state 4

    2 program: extern_0list . decafpackage

    T_PACKAGE  shift, and go to state 8

    decafpackage  go to state 9


state 5

    4 extern_0list: extern_define . extern_0list
    5             | extern_define .

    T_EXTERN  shift, and go to state 1

    T_PACKAGE  reduce using rule 5 (extern_0list)
    T_PACKAGE  [reduce using rule 6 (extern_0list)]
    $default   reduce using rule 5 (extern_0list)

    extern_0list   go to state 10
    extern_define  go to state 5


state 6

    7 extern_define: T_EXTERN T_FUNC . T_IDENTIFIER T_LPAREN T_RPAREN method_type T_SEMICOLON
    8              | T_EXTERN T_FUNC . T_IDENTIFIER T_LPAREN extern_type_1commalist T_RPAREN method_type T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 11


state 7

    0 $accept: start $end .

    $default  accept


state 8

    3 decafpackage: T_PACKAGE . T_IDENTIFIER T_LCB field_decl_0list method_decl_0list T_RCB

    T_IDENTIFIER  shift, and go to state 12


state 9

    2 program: extern_0list decafpackage .

    $default  reduce using rule 2 (program)


state 10

    4 extern_0list: extern_define extern_0list .

    $default  reduce using rule 4 (extern_0list)


state 11

    7 extern_define: T_EXTERN T_FUNC T_IDENTIFIER . T_LPAREN T_RPAREN method_type T_SEMICOLON
    8              | T_EXTERN T_FUNC T_IDENTIFIER . T_LPAREN extern_type_1commalist T_RPAREN method_type T_SEMICOLON

    T_LPAREN  shift, and go to state 13


state 12

    3 decafpackage: T_PACKAGE T_IDENTIFIER . T_LCB field_decl_0list method_decl_0list T_RCB

    T_LCB  shift, and go to state 14


state 13

    7 extern_define: T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN . T_RPAREN method_type T_SEMICOLON
    8              | T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN . extern_type_1commalist T_RPAREN method_type T_SEMICOLON

    T_RPAREN      shift, and go to state 15
    T_BOOLTYPE    shift, and go to state 16
    T_INTTYPE     shift, and go to state 17
    T_STRINGTYPE  shift, and go to state 18

    extern_type_1commalist  go to state 19
    extern_type             go to state 20
    type                    go to state 21


state 14

    3 decafpackage: T_PACKAGE T_IDENTIFIER T_LCB . field_decl_0list method_decl_0list T_RCB

    T_VAR  shift, and go to state 22

    $default  reduce using rule 13 (field_decl_0list)

    field_decl_0list  go to state 23
    field_decl        go to state 24


state 15

    7 extern_define: T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN T_RPAREN . method_type T_SEMICOLON

    T_BOOLTYPE  shift, and go to state 16
    T_INTTYPE   shift, and go to state 17
    T_VOID      shift, and go to state 25

    method_type  go to state 26
    type         go to state 27


state 16

   84 type: T_BOOLTYPE .

    $default  reduce using rule 84 (type)


state 17

   83 type: T_INTTYPE .

    $default  reduce using rule 83 (type)


state 18

   78 extern_type: T_STRINGTYPE .

    $default  reduce using rule 78 (extern_type)


state 19

    8 extern_define: T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN extern_type_1commalist . T_RPAREN method_type T_SEMICOLON
    9 extern_type_1commalist: extern_type_1commalist . T_COMMA extern_type

    T_COMMA   shift, and go to state 28
    T_RPAREN  shift, and go to state 29


state 20

   10 extern_type_1commalist: extern_type .

    $default  reduce using rule 10 (extern_type_1commalist)


state 21

   79 extern_type: type .

    $default  reduce using rule 79 (extern_type)


state 22

   14 field_decl: T_VAR . identifier_1commalist type T_SEMICOLON
   15           | T_VAR . identifier_1commalist array_type T_SEMICOLON
   16           | T_VAR . identifier_1commalist type T_ASSIGN constant T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 30

    identifier_1commalist  go to state 31


state 23

    3 decafpackage: T_PACKAGE T_IDENTIFIER T_LCB field_decl_0list . method_decl_0list T_RCB

    T_FUNC  shift, and go to state 32

    $default  reduce using rule 19 (method_decl_0list)

    method_decl_0list  go to state 33
    method_decl        go to state 34


state 24

   11 field_decl_0list: field_decl . field_decl_0list
   12                 | field_decl .

    T_VAR  shift, and go to state 22

    T_RCB     reduce using rule 12 (field_decl_0list)
    T_RCB     [reduce using rule 13 (field_decl_0list)]
    T_FUNC    reduce using rule 12 (field_decl_0list)
    T_FUNC    [reduce using rule 13 (field_decl_0list)]
    $default  reduce using rule 12 (field_decl_0list)

    field_decl_0list  go to state 35
    field_decl        go to state 24


state 25

   80 method_type: T_VOID .

    $default  reduce using rule 80 (method_type)


state 26

    7 extern_define: T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN T_RPAREN method_type . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 36


state 27

   81 method_type: type .

    $default  reduce using rule 81 (method_type)


state 28

    9 extern_type_1commalist: extern_type_1commalist T_COMMA . extern_type

    T_BOOLTYPE    shift, and go to state 16
    T_INTTYPE     shift, and go to state 17
    T_STRINGTYPE  shift, and go to state 18

    extern_type  go to state 37
    type         go to state 21


state 29

    8 extern_define: T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN extern_type_1commalist T_RPAREN . method_type T_SEMICOLON

    T_BOOLTYPE  shift, and go to state 16
    T_INTTYPE   shift, and go to state 17
    T_VOID      shift, and go to state 25

    method_type  go to state 38
    type         go to state 27


state 30

   51 identifier_1commalist: T_IDENTIFIER .

    $default  reduce using rule 51 (identifier_1commalist)


state 31

   14 field_decl: T_VAR identifier_1commalist . type T_SEMICOLON
   15           | T_VAR identifier_1commalist . array_type T_SEMICOLON
   16           | T_VAR identifier_1commalist . type T_ASSIGN constant T_SEMICOLON
   50 identifier_1commalist: identifier_1commalist . T_COMMA T_IDENTIFIER

    T_COMMA     shift, and go to state 39
    T_LSB       shift, and go to state 40
    T_BOOLTYPE  shift, and go to state 16
    T_INTTYPE   shift, and go to state 17

    array_type  go to state 41
    type        go to state 42


state 32

   20 method_decl: T_FUNC . T_IDENTIFIER T_LPAREN T_RPAREN method_type block
   21            | T_FUNC . T_IDENTIFIER T_LPAREN method_decl_1commalist T_RPAREN method_type block

    T_IDENTIFIER  shift, and go to state 43


state 33

    3 decafpackage: T_PACKAGE T_IDENTIFIER T_LCB field_decl_0list method_decl_0list . T_RCB

    T_RCB  shift, and go to state 44


state 34

   17 method_decl_0list: method_decl . method_decl_0list
   18                  | method_decl .

    T_FUNC  shift, and go to state 32

    T_RCB     reduce using rule 18 (method_decl_0list)
    T_RCB     [reduce using rule 19 (method_decl_0list)]
    $default  reduce using rule 18 (method_decl_0list)

    method_decl_0list  go to state 45
    method_decl        go to state 34


state 35

   11 field_decl_0list: field_decl field_decl_0list .

    $default  reduce using rule 11 (field_decl_0list)


state 36

    7 extern_define: T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN T_RPAREN method_type T_SEMICOLON .

    $default  reduce using rule 7 (extern_define)


state 37

    9 extern_type_1commalist: extern_type_1commalist T_COMMA extern_type .

    $default  reduce using rule 9 (extern_type_1commalist)


state 38

    8 extern_define: T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN extern_type_1commalist T_RPAREN method_type . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 46


state 39

   50 identifier_1commalist: identifier_1commalist T_COMMA . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 47


state 40

   82 array_type: T_LSB . T_INTCONSTANT T_RSB type

    T_INTCONSTANT  shift, and go to state 48


state 41

   15 field_decl: T_VAR identifier_1commalist array_type . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 49


state 42

   14 field_decl: T_VAR identifier_1commalist type . T_SEMICOLON
   16           | T_VAR identifier_1commalist type . T_ASSIGN constant T_SEMICOLON

    T_SEMICOLON  shift, and go to state 50
    T_ASSIGN     shift, and go to state 51


state 43

   20 method_decl: T_FUNC T_IDENTIFIER . T_LPAREN T_RPAREN method_type block
   21            | T_FUNC T_IDENTIFIER . T_LPAREN method_decl_1commalist T_RPAREN method_type block

    T_LPAREN  shift, and go to state 52


state 44

    3 decafpackage: T_PACKAGE T_IDENTIFIER T_LCB field_decl_0list method_decl_0list T_RCB .

    $default  reduce using rule 3 (decafpackage)


state 45

   17 method_decl_0list: method_decl method_decl_0list .

    $default  reduce using rule 17 (method_decl_0list)


state 46

    8 extern_define: T_EXTERN T_FUNC T_IDENTIFIER T_LPAREN extern_type_1commalist T_RPAREN method_type T_SEMICOLON .

    $default  reduce using rule 8 (extern_define)


state 47

   50 identifier_1commalist: identifier_1commalist T_COMMA T_IDENTIFIER .

    $default  reduce using rule 50 (identifier_1commalist)


state 48

   82 array_type: T_LSB T_INTCONSTANT . T_RSB type

    T_RSB  shift, and go to state 53


state 49

   15 field_decl: T_VAR identifier_1commalist array_type T_SEMICOLON .

    $default  reduce using rule 15 (field_decl)


state 50

   14 field_decl: T_VAR identifier_1commalist type T_SEMICOLON .

    $default  reduce using rule 14 (field_decl)


state 51

   16 field_decl: T_VAR identifier_1commalist type T_ASSIGN . constant T_SEMICOLON

    T_FALSE           shift, and go to state 54
    T_TRUE            shift, and go to state 55
    T_CHARCONSTANT    shift, and go to state 56
    T_INTCONSTANT     shift, and go to state 57
    T_STRINGCONSTANT  shift, and go to state 58

    constant       go to state 59
    bool_constant  go to state 60


state 52

   20 method_decl: T_FUNC T_IDENTIFIER T_LPAREN . T_RPAREN method_type block
   21            | T_FUNC T_IDENTIFIER T_LPAREN . method_decl_1commalist T_RPAREN method_type block

    T_RPAREN      shift, and go to state 61
    T_IDENTIFIER  shift, and go to state 62

    method_decl_1commalist  go to state 63


state 53

   82 array_type: T_LSB T_INTCONSTANT T_RSB . type

    T_BOOLTYPE  shift, and go to state 16
    T_INTTYPE   shift, and go to state 17

    type  go to state 64


state 54

   90 bool_constant: T_FALSE .

    $default  reduce using rule 90 (bool_constant)


state 55

   89 bool_constant: T_TRUE .

    $default  reduce using rule 89 (bool_constant)


state 56

   86 constant: T_CHARCONSTANT .

    $default  reduce using rule 86 (constant)


state 57

   85 constant: T_INTCONSTANT .

    $default  reduce using rule 85 (constant)


state 58

   87 constant: T_STRINGCONSTANT .

    $default  reduce using rule 87 (constant)


state 59

   16 field_decl: T_VAR identifier_1commalist type T_ASSIGN constant . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 65


state 60

   88 constant: bool_constant .

    $default  reduce using rule 88 (constant)


state 61

   20 method_decl: T_FUNC T_IDENTIFIER T_LPAREN T_RPAREN . method_type block

    T_BOOLTYPE  shift, and go to state 16
    T_INTTYPE   shift, and go to state 17
    T_VOID      shift, and go to state 25

    method_type  go to state 66
    type         go to state 27


state 62

   23 method_decl_1commalist: T_IDENTIFIER . type

    T_BOOLTYPE  shift, and go to state 16
    T_INTTYPE   shift, and go to state 17

    type  go to state 67


state 63

   21 method_decl: T_FUNC T_IDENTIFIER T_LPAREN method_decl_1commalist . T_RPAREN method_type block
   22 method_decl_1commalist: method_decl_1commalist . T_COMMA T_IDENTIFIER type

    T_COMMA   shift, and go to state 68
    T_RPAREN  shift, and go to state 69


state 64

   82 array_type: T_LSB T_INTCONSTANT T_RSB type .

    $default  reduce using rule 82 (array_type)


state 65

   16 field_decl: T_VAR identifier_1commalist type T_ASSIGN constant T_SEMICOLON .

    $default  reduce using rule 16 (field_decl)


state 66

   20 method_decl: T_FUNC T_IDENTIFIER T_LPAREN T_RPAREN method_type . block

    T_LCB  shift, and go to state 70

    block  go to state 71


state 67

   23 method_decl_1commalist: T_IDENTIFIER type .

    $default  reduce using rule 23 (method_decl_1commalist)


state 68

   22 method_decl_1commalist: method_decl_1commalist T_COMMA . T_IDENTIFIER type

    T_IDENTIFIER  shift, and go to state 72


state 69

   21 method_decl: T_FUNC T_IDENTIFIER T_LPAREN method_decl_1commalist T_RPAREN . method_type block

    T_BOOLTYPE  shift, and go to state 16
    T_INTTYPE   shift, and go to state 17
    T_VOID      shift, and go to state 25

    method_type  go to state 73
    type         go to state 27


state 70

   42 block: T_LCB . var_decl_0list statement_0list T_RCB

    T_VAR  shift, and go to state 74

    $default  reduce using rule 48 (var_decl_0list)

    var_decl_0list  go to state 75
    var_decl        go to state 76


state 71

   20 method_decl: T_FUNC T_IDENTIFIER T_LPAREN T_RPAREN method_type block .

    $default  reduce using rule 20 (method_decl)


state 72

   22 method_decl_1commalist: method_decl_1commalist T_COMMA T_IDENTIFIER . type

    T_BOOLTYPE  shift, and go to state 16
    T_INTTYPE   shift, and go to state 17

    type  go to state 77


state 73

   21 method_decl: T_FUNC T_IDENTIFIER T_LPAREN method_decl_1commalist T_RPAREN method_type . block

    T_LCB  shift, and go to state 70

    block  go to state 78


state 74

   49 var_decl: T_VAR . identifier_1commalist type T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 30

    identifier_1commalist  go to state 79


state 75

   42 block: T_LCB var_decl_0list . statement_0list T_RCB

    T_LCB         shift, and go to state 70
    T_BREAK       shift, and go to state 80
    T_CONTINUE    shift, and go to state 81
    T_FOR         shift, and go to state 82
    T_IF          shift, and go to state 83
    T_RETURN      shift, and go to state 84
    T_WHILE       shift, and go to state 85
    T_IDENTIFIER  shift, and go to state 86

    $default  reduce using rule 45 (statement_0list)

    method_call      go to state 87
    statement        go to state 88
    block            go to state 89
    statement_0list  go to state 90
    assign           go to state 91


state 76

   46 var_decl_0list: var_decl . var_decl_0list
   47               | var_decl .

    T_VAR  shift, and go to state 74

    T_LCB         reduce using rule 47 (var_decl_0list)
    T_LCB         [reduce using rule 48 (var_decl_0list)]
    T_RCB         reduce using rule 47 (var_decl_0list)
    T_RCB         [reduce using rule 48 (var_decl_0list)]
    T_BREAK       reduce using rule 47 (var_decl_0list)
    T_BREAK       [reduce using rule 48 (var_decl_0list)]
    T_CONTINUE    reduce using rule 47 (var_decl_0list)
    T_CONTINUE    [reduce using rule 48 (var_decl_0list)]
    T_FOR         reduce using rule 47 (var_decl_0list)
    T_FOR         [reduce using rule 48 (var_decl_0list)]
    T_IF          reduce using rule 47 (var_decl_0list)
    T_IF          [reduce using rule 48 (var_decl_0list)]
    T_RETURN      reduce using rule 47 (var_decl_0list)
    T_RETURN      [reduce using rule 48 (var_decl_0list)]
    T_WHILE       reduce using rule 47 (var_decl_0list)
    T_WHILE       [reduce using rule 48 (var_decl_0list)]
    T_IDENTIFIER  reduce using rule 47 (var_decl_0list)
    T_IDENTIFIER  [reduce using rule 48 (var_decl_0list)]
    $default      reduce using rule 47 (var_decl_0list)

    var_decl_0list  go to state 92
    var_decl        go to state 76


state 77

   22 method_decl_1commalist: method_decl_1commalist T_COMMA T_IDENTIFIER type .

    $default  reduce using rule 22 (method_decl_1commalist)


state 78

   21 method_decl: T_FUNC T_IDENTIFIER T_LPAREN method_decl_1commalist T_RPAREN method_type block .

    $default  reduce using rule 21 (method_decl)


state 79

   49 var_decl: T_VAR identifier_1commalist . type T_SEMICOLON
   50 identifier_1commalist: identifier_1commalist . T_COMMA T_IDENTIFIER

    T_COMMA     shift, and go to state 39
    T_BOOLTYPE  shift, and go to state 16
    T_INTTYPE   shift, and go to state 17

    type  go to state 93


state 80

   37 statement: T_BREAK . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 94


state 81

   38 statement: T_CONTINUE . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 95


state 82

   33 statement: T_FOR . T_LPAREN assign_1list T_SEMICOLON expr T_SEMICOLON assign_1list T_RPAREN block

    T_LPAREN  shift, and go to state 96


state 83

   30 statement: T_IF . T_LPAREN expr T_RPAREN block
   31          | T_IF . T_LPAREN expr T_RPAREN block T_ELSE block

    T_LPAREN  shift, and go to state 97


state 84

   34 statement: T_RETURN . T_SEMICOLON
   35          | T_RETURN . T_LPAREN T_RPAREN T_SEMICOLON
   36          | T_RETURN . T_LPAREN expr T_RPAREN T_SEMICOLON

    T_LPAREN     shift, and go to state 98
    T_SEMICOLON  shift, and go to state 99


state 85

   32 statement: T_WHILE . T_LPAREN expr T_RPAREN block

    T_LPAREN  shift, and go to state 100


state 86

   24 method_call: T_IDENTIFIER . T_LPAREN T_RPAREN
   25            | T_IDENTIFIER . T_LPAREN method_arg_1commalist T_RPAREN
   54 assign: T_IDENTIFIER . T_ASSIGN expr
   55       | T_IDENTIFIER . T_LSB expr T_RSB T_ASSIGN expr

    T_LPAREN  shift, and go to state 101
    T_LSB     shift, and go to state 102
    T_ASSIGN  shift, and go to state 103


state 87

   40 statement: method_call . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 104


state 88

   43 statement_0list: statement . statement_0list
   44                | statement .

    T_LCB         shift, and go to state 70
    T_BREAK       shift, and go to state 80
    T_CONTINUE    shift, and go to state 81
    T_FOR         shift, and go to state 82
    T_IF          shift, and go to state 83
    T_RETURN      shift, and go to state 84
    T_WHILE       shift, and go to state 85
    T_IDENTIFIER  shift, and go to state 86

    T_RCB     reduce using rule 44 (statement_0list)
    T_RCB     [reduce using rule 45 (statement_0list)]
    $default  reduce using rule 44 (statement_0list)

    method_call      go to state 87
    statement        go to state 88
    block            go to state 89
    statement_0list  go to state 105
    assign           go to state 91


state 89

   41 statement: block .

    $default  reduce using rule 41 (statement)


state 90

   42 block: T_LCB var_decl_0list statement_0list . T_RCB

    T_RCB  shift, and go to state 106


state 91

   39 statement: assign . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 107


state 92

   46 var_decl_0list: var_decl var_decl_0list .

    $default  reduce using rule 46 (var_decl_0list)


state 93

   49 var_decl: T_VAR identifier_1commalist type . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 108


state 94

   37 statement: T_BREAK T_SEMICOLON .

    $default  reduce using rule 37 (statement)


state 95

   38 statement: T_CONTINUE T_SEMICOLON .

    $default  reduce using rule 38 (statement)


state 96

   33 statement: T_FOR T_LPAREN . assign_1list T_SEMICOLON expr T_SEMICOLON assign_1list T_RPAREN block

    T_IDENTIFIER  shift, and go to state 109

    assign_1list  go to state 110
    assign        go to state 111


state 97

   30 statement: T_IF T_LPAREN . expr T_RPAREN block
   31          | T_IF T_LPAREN . expr T_RPAREN block T_ELSE block

    T_LPAREN          shift, and go to state 112
    T_MINUS           shift, and go to state 113
    T_NOT             shift, and go to state 114
    T_FALSE           shift, and go to state 54
    T_TRUE            shift, and go to state 55
    T_CHARCONSTANT    shift, and go to state 56
    T_INTCONSTANT     shift, and go to state 57
    T_STRINGCONSTANT  shift, and go to state 58
    T_IDENTIFIER      shift, and go to state 115

    method_call    go to state 116
    expr           go to state 117
    constant       go to state 118
    bool_constant  go to state 60


state 98

   35 statement: T_RETURN T_LPAREN . T_RPAREN T_SEMICOLON
   36          | T_RETURN T_LPAREN . expr T_RPAREN T_SEMICOLON

    T_LPAREN          shift, and go to state 112
    T_RPAREN          shift, and go to state 119
    T_MINUS           shift, and go to state 113
    T_NOT             shift, and go to state 114
    T_FALSE           shift, and go to state 54
    T_TRUE            shift, and go to state 55
    T_CHARCONSTANT    shift, and go to state 56
    T_INTCONSTANT     shift, and go to state 57
    T_STRINGCONSTANT  shift, and go to state 58
    T_IDENTIFIER      shift, and go to state 115

    method_call    go to state 116
    expr           go to state 120
    constant       go to state 118
    bool_constant  go to state 60


state 99

   34 statement: T_RETURN T_SEMICOLON .

    $default  reduce using rule 34 (statement)


state 100

   32 statement: T_WHILE T_LPAREN . expr T_RPAREN block

    T_LPAREN          shift, and go to state 112
    T_MINUS           shift, and go to state 113
    T_NOT             shift, and go to state 114
    T_FALSE           shift, and go to state 54
    T_TRUE            shift, and go to state 55
    T_CHARCONSTANT    shift, and go to state 56
    T_INTCONSTANT     shift, and go to state 57
    T_STRINGCONSTANT  shift, and go to state 58
    T_IDENTIFIER      shift, and go to state 115

    method_call    go to state 116
    expr           go to state 121
    constant       go to state 118
    bool_constant  go to state 60


state 101

   24 method_call: T_IDENTIFIER T_LPAREN . T_RPAREN
   25            | T_IDENTIFIER T_LPAREN . method_arg_1commalist T_RPAREN

    T_LPAREN          shift, and go to state 112
    T_RPAREN          shift, and go to state 122
    T_MINUS           shift, and go to state 113
    T_NOT             shift, and go to state 114
    T_FALSE           shift, and go to state 54
    T_TRUE            shift, and go to state 55
    T_CHARCONSTANT    shift, and go to state 56
    T_INTCONSTANT     shift, and go to state 57
    T_STRINGCONSTANT  shift, and go to state 123
    T_IDENTIFIER      shift, and go to state 115

    method_call            go to state 116
    method_arg_1commalist  go to state 124
    method_arg             go to state 125
    expr                   go to state 126
    constant               go to state 118
    bool_constant          go to state 60


state 102

   55 assign: T_IDENTIFIER T_LSB . expr T_RSB T_ASSIGN expr

    T_LPAREN          shift, and go to state 112
    T_MINUS           shift, and go to state 113
    T_NOT             shift, and go to state 114
    T_FALSE           shift, and go to state 54
    T_TRUE            shift, and go to state 55
    T_CHARCONSTANT    shift, and go to state 56
    T_INTCONSTANT     shift, and go to state 57
    T_STRINGCONSTANT  shift, and go to state 58
    T_IDENTIFIER      shift, and go to state 115

    method_call    go to state 116
    expr           go to state 127
    constant       go to state 118
    bool_constant  go to state 60


state 103

   54 assign: T_IDENTIFIER T_ASSIGN . expr
